[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["SF Wu"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/wsfy15/"
homepage = "https://github.com/wsfy15/"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
